--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@record-evolution/widget-statehistory",
-    "description": "Webcomponent widget-statehistory following open-wc recommendations",
+    "name": "@record-evolution/widget-heatmap",
+    "description": "Webcomponent widget-heatmap following open-wc recommendations",
     "license": "MIT",
-    "author": "widget-statehistory",
-    "version": "1.0.5",
+    "author": "widget-heatmap",
+    "version": "1.0.0",
     "type": "module",
-    "main": "dist/widget-statehistory.js",
-    "types": "dist/src/widget-statehistory.d.ts",
+    "main": "dist/widget-heatmap.js",
+    "types": "dist/src/widget-heatmap.d.ts",
     "files": [
         "dist",
         "src"
@@ -14,8 +14,8 @@
     "scripts": {
         "analyze": "cem analyze --litelement",
         "start": "concurrently -k -r \"npm run watch\" \"wds\"",
-        "link": "npm run build && npm link && cd ../RESWARM/frontend && npm link @record-evolution/widget-statehistory",
-        "unlink": "npm unlink --global && cd ../RESWARM/frontend && npm unlink @record-evolution/widget-statehistory && npm i @record-evolution/widget-statehistory",
+        "link": "npm run build && npm link && cd ../RESWARM/frontend && npm link @record-evolution/widget-heatmap",
+        "unlink": "npm unlink --global && cd ../RESWARM/frontend && npm unlink @record-evolution/widget-heatmap && npm i @record-evolution/widget-heatmap",
         "build": "rollup -c rollup.config.js",
         "watch": "rollup -w -c rollup.config.js",
         "types": "cat src/definition-schema.json | json2ts --style.tabWidth=4 > src/definition-schema.d.ts",
@@ -44,14 +44,14 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/RecordEvolution/widget-statehistory.git"
+        "url": "git+https://github.com/RecordEvolution/widget-heatmap.git"
     },
     "keywords": [
         "widget",
-        "statehistory"
+        "heatmap"
     ],
     "bugs": {
-        "url": "https://github.com/RecordEvolution/widget-statehistory/issues"
+        "url": "https://github.com/RecordEvolution/widget-heatmap/issues"
     },
-    "homepage": "https://github.com/RecordEvolution/widget-statehistory#readme"
+    "homepage": "https://github.com/RecordEvolution/widget-heatmap#readme"
 }
